Cambios en el metodo updateLocate y codigo comentado