@@ -61,10 +61,14 @@ import com.uniovi.foxvid.modelo.User;
 import com.uniovi.foxvid.vista.MainActivity;
 import com.uniovi.foxvid.vista.NewPostActivity;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+
+import static java.lang.Double.*;
 
 
 public class PostFragment extends Fragment {
@@ -102,22 +106,24 @@ public class PostFragment extends Fragment {
 
         listPostView = (RecyclerView) root.findViewById(R.id.idRvPost);
 
-
+        //Se carga el gesto de los posts para dar like y dislike
         createGesture();
 
-        Bundle args = getArguments();
-        if (args != null) {
 
-        }
+        //TODO Esto que ta comentao fae falta??
+//        Bundle args = getArguments();
+//        if (args != null) {
+//
+//        }
 
         cargarPost();
 
-        //Floating button -> new post
+        //Floating button que carga la activity para crear nuevos posts
         btnNewPost = root.findViewById(R.id.btnNewPost);
         btnNewPost.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View view) {
-                loadNewPost();
+                loadNewPostActivity();
             }
         });
 
@@ -132,18 +138,39 @@ public class PostFragment extends Fragment {
     }
 
 
-
-
-
-    public void cargarPost(){
-        filterUbicacion();
-    }
-
-
-    public void filterUbicacion(){
+    /**
+     * Método que carga los posts en funcion de la distancia definida en las preferencias
+     */
+    public void cargarPost() {
         SharedPreferences sharedPreferencesMainRecycler = PreferenceManager.getDefaultSharedPreferences(getContext());
         distancia = sharedPreferencesMainRecycler.getInt("Key_Seek_KM", 0);
-        updateLocate();
+
+        OnSuccessListener<Location> listener = new OnSuccessListener<Location>() {
+            @Override
+            public void onSuccess(Location location) {
+                // Got last known location. In some rare situations this can be null.
+                if (location != null) {
+                    coordinate.setLat(location.getLatitude());
+                    coordinate.setLon(location.getLongitude());
+                    beforeCoordinate.setLat(location.getLatitude());
+                    beforeCoordinate.setLon(location.getLongitude());
+                    numeroDeIntentosCordenados = 0;
+                    loadPost();
+                } else {
+                    if (beforeCoordinate.getLon() == 0 && beforeCoordinate.getLat() == 0 && numeroDeIntentosCordenados < MAX_NUMBER_OF_INTENTES) {
+                        preguntarPorUbicacion();
+                        numeroDeIntentosCordenados++;
+                    } else {
+                        coordinate.setLat(beforeCoordinate.getLat());
+                        coordinate.setLon(beforeCoordinate.getLon());
+                        loadPost();
+                    }
+
+                }
+            }
+        };
+
+        updateLocate(listener);
     }
 
     protected void loadPost() {
@@ -153,7 +180,7 @@ public class PostFragment extends Fragment {
         updateValues();
     }
 
-    protected void loadNewPost() {
+    protected void loadNewPostActivity() {
         Intent newPostIntent = new Intent(getActivity(), NewPostActivity.class);
         startActivity(newPostIntent);
     }
@@ -173,19 +200,19 @@ public class PostFragment extends Fragment {
                         for (DocumentChange dc : snapshots.getDocumentChanges()) {
                             switch (dc.getType()) {
                                 case ADDED:
-                                    if (coordinate.checkDistancia(new Double(dc.getDocument().get("lat").toString()), new Double(dc.getDocument().get("lon").toString()), distancia)) {
+                                    if (coordinate.checkDistancia(Double.valueOf(dc.getDocument().get("lat").toString()), Double.valueOf(dc.getDocument().get("lon").toString()), distancia)) {
                                         boolean existe = false;
-                                        for (Post p:listPost) {
-                                            if(p.getUuid().equals(dc.getDocument().get("uid")))
+                                        for (Post p : listPost) {
+                                            if (p.getUuid().equals(dc.getDocument().get("uid")))
                                                 existe = true;
                                         }
-                                        if(!existe){
+                                        if (!existe) {
                                             listPost.add(0, new Post(dc.getDocument().get("uid").toString(),
                                                     dc.getDocument().get("post").toString(),
                                                     //public User(String uid, String name, String email, Uri photo)
                                                     new User(dc.getDocument().get("userUid").toString(), null, dc.getDocument().get("userEmail").toString(), dc.getDocument().get("userImage").toString()),
                                                     (Timestamp) dc.getDocument().get("date"),
-                                                    new Coordinate(new Double(dc.getDocument().get("lat").toString()), new Double(dc.getDocument().get("lat").toString())),
+                                                    new Coordinate(valueOf(dc.getDocument().get("lat").toString()), Double.valueOf(dc.getDocument().get("lat").toString())),
                                                     0,
                                                     0)
                                             );
@@ -200,6 +227,8 @@ public class PostFragment extends Fragment {
                                 case REMOVED:
                                     //Log.d(TAG, "Removed city: " + dc.getDocument().getData());
                                     break;
+                                default:
+                                    break;
                             }
                         }
 
@@ -213,43 +242,54 @@ public class PostFragment extends Fragment {
                 });
     }
 
-    private void updateLocate() {
+    /**
+     * Método que obtiene la última localización conocida del usuario.
+     * Si no tiene los permisos necesarios, le muestra un mensaje para poder darlos.
+     * @param listener, listener con la funcionalidad que se espera al obtener la última ubicación del usuario
+     */
+    private void updateLocate(OnSuccessListener<Location> listener) {
         FusedLocationProviderClient fusedLocationClient = LocationServices.getFusedLocationProviderClient(getActivity());
         if (ActivityCompat.checkSelfPermission(getContext(),
                 Manifest.permission.ACCESS_FINE_LOCATION) != PackageManager.PERMISSION_GRANTED) {
             return;
         }
-        //TODO Solucionar problema con la ubicación
-        fusedLocationClient.getLastLocation()
-                .addOnSuccessListener(getActivity(), new OnSuccessListener<Location>() {
-                    @Override
-                    public void onSuccess(Location location) {
-                        // Got last known location. In some rare situations this can be null.
-                        if (location != null) {
-                            coordinate.setLat(location.getLatitude());
-                            coordinate.setLon(location.getLongitude());
-                            beforeCoordinate.setLat(location.getLatitude());
-                            beforeCoordinate.setLon(location.getLongitude());
-                            numeroDeIntentosCordenados = 0;
-                            loadPost();
-                        }else{
-                            if(beforeCoordinate.getLon() == 0 && beforeCoordinate.getLat() == 0 &&  numeroDeIntentosCordenados < MAX_NUMBER_OF_INTENTES){
-                                preguntarPorUbicacion();
-                                numeroDeIntentosCordenados ++;
-                            }else{
-                                coordinate.setLat(beforeCoordinate.getLat());
-                                coordinate.setLon(beforeCoordinate.getLon());
-                                loadPost();
-                            }
+        // TODO Solucionar problema con la ubicación.
+        // TODO Puse esto separado por si lo sacamos a un LocationHandler o algo asi, que se usa en más sitios. Miralo en el cargarPost y en NewPostActivity
+        fusedLocationClient.getLastLocation().addOnSuccessListener(getActivity(), listener);
 
-                        }
-                    }
-                });
+//        fusedLocationClient.getLastLocation()
+//                .addOnSuccessListener(getActivity(), new OnSuccessListener<Location>() {
+//                    @Override
+//                    public void onSuccess(Location location) {
+//                        // Got last known location. In some rare situations this can be null.
+//                        if (location != null) {
+//                            coordinate.setLat(location.getLatitude());
+//                            coordinate.setLon(location.getLongitude());
+//                            beforeCoordinate.setLat(location.getLatitude());
+//                            beforeCoordinate.setLon(location.getLongitude());
+//                            numeroDeIntentosCordenados = 0;
+//                            loadPost();
+//                        }else{
+//                            if(beforeCoordinate.getLon() == 0 && beforeCoordinate.getLat() == 0 &&  numeroDeIntentosCordenados < MAX_NUMBER_OF_INTENTES){
+//                                preguntarPorUbicacion();
+//                                numeroDeIntentosCordenados ++;
+//                            }else{
+//                                coordinate.setLat(beforeCoordinate.getLat());
+//                                coordinate.setLon(beforeCoordinate.getLon());
+//                                loadPost();
+//                            }
+//
+//                        }
+//                    }
+//                });
 
     }
 
+    /**
+     * Método que carga un mensaje de diálogo en caso de que la ubicación no esté activada.
+     */
     private void preguntarPorUbicacion() {
-        if(numeroDeIntentosCordenados == 0 ) {
+        if (numeroDeIntentosCordenados == 0) {
             customDialog = new Dialog(getContext());
             customDialog.requestWindowFeature(Window.FEATURE_NO_TITLE);
             customDialog.setCancelable(true);
@@ -272,32 +312,37 @@ public class PostFragment extends Fragment {
     }
 
 
+    /**
+     * Crea el gesto de deslizar la tarjeta con un post a izquierda o derecha para dar like o dislike respectivamente.
+     */
     private void createGesture() {
         ItemTouchHelper.SimpleCallback simpleItemTouchCallback = new ItemTouchHelper.SimpleCallback(0, ItemTouchHelper.LEFT | ItemTouchHelper.RIGHT) {
 
             @Override
-            public boolean onMove(RecyclerView recyclerView, RecyclerView.ViewHolder viewHolder, RecyclerView.ViewHolder target) {
+            public boolean onMove(@NotNull RecyclerView recyclerView, @NotNull RecyclerView.ViewHolder viewHolder, @NotNull RecyclerView.ViewHolder target) {
                 return true;
             }
 
             @Override
-            public void onSwiped(RecyclerView.ViewHolder viewHolder, int swipeDir) {
+            public void onSwiped(@NotNull RecyclerView.ViewHolder viewHolder, int swipeDir) {
                 if (swipeDir == ItemTouchHelper.LEFT)
+                    //Si se desliza a la izquierda, se da dislike
                     updateLikes(viewHolder.getLayoutPosition(), -1);
                 else
+                    //Si se desliza a la derecha, se da like
                     updateLikes(viewHolder.getLayoutPosition(), 1);
                 System.out.println(listPost.get(viewHolder.getLayoutPosition()).getText());
                 adapter.notifyItemChanged(viewHolder.getAdapterPosition());
             }
 
             @Override
-            public void onMoved(RecyclerView recyclerView, RecyclerView.ViewHolder viewHolder, int fromPos, RecyclerView.ViewHolder target, int toPos, int x, int y) {
+            public void onMoved(@NotNull RecyclerView recyclerView, @NotNull RecyclerView.ViewHolder viewHolder, int fromPos, @NotNull RecyclerView.ViewHolder target, int toPos, int x, int y) {
                 super.onMoved(recyclerView, viewHolder, fromPos, target, toPos, x, y);
             }
 
             @Override
-            public void onChildDraw(Canvas c, RecyclerView recyclerView, RecyclerView.ViewHolder viewHolder, float dX, float dY, int actionState, boolean isCurrentlyActive) {
-
+            public void onChildDraw(@NotNull Canvas c, @NotNull RecyclerView recyclerView, @NotNull RecyclerView.ViewHolder viewHolder, float dX, float dY, int actionState, boolean isCurrentlyActive) {
+                //Se definen los colores e imágenes que se muestran al deslizar la tarjeta a izquierda o derecha.
                 Bitmap icon;
                 Paint p = new Paint();
                 if (actionState == ItemTouchHelper.ACTION_STATE_SWIPE) {
@@ -306,7 +351,9 @@ public class PostFragment extends Fragment {
                     float height = (float) itemView.getBottom() - (float) itemView.getTop();
                     float width = height / 3;
 
+
                     if (dX > 0) {
+                        //Si se desliza a la derecha, se muestra un fondo verde y una mano indicando like
                         p.setColor(Color.parseColor("#388E3C"));
                         RectF background = new RectF((float) itemView.getLeft(), (float) itemView.getTop(), dX, (float) itemView.getBottom());
                         c.drawRect(background, p);
@@ -314,6 +361,7 @@ public class PostFragment extends Fragment {
                         RectF icon_dest = new RectF((float) itemView.getLeft() + width, (float) itemView.getTop() + width, (float) itemView.getLeft() + 2 * width, (float) itemView.getBottom() - width);
                         c.drawBitmap(icon, null, icon_dest, p);
                     } else if (dX < 0) {
+                        //Si se desliza a la izquierda, se muestra un fondo rojo y una mano indicando dislike
                         p.setColor(Color.parseColor("#D32F2F"));
                         RectF background = new RectF((float) itemView.getRight() + dX, (float) itemView.getTop(), (float) itemView.getRight(), (float) itemView.getBottom());
                         c.drawRect(background, p);
@@ -332,9 +380,15 @@ public class PostFragment extends Fragment {
     }
 
 
+    /**
+     * Método que actualiza los likes o dislikes que tiene un post
+     * @param position, posición del post dentro del adapter, de tipo int
+     * @param like, indica si se ha dado like (1) o dislike (-1), de tipo int.
+     */
     private void updateLikes(final int position, int like) {
-        //FirebaseFirestore db = FirebaseFirestore.getInstance();
         String userId = FirebaseAuth.getInstance().getCurrentUser().getUid();
+
+        //Referencia al documento que guarda la interacción de un usuario en un post
         DocumentReference postRef = db.collection("post").document(listPost.get(position).getUuid())
                 .collection("interactions").document(userId);
 
@@ -342,11 +396,13 @@ public class PostFragment extends Fragment {
         Map<String, Object> data = new HashMap<>();
         data.put("like", like);
 
+        //Se hace la petición de escritura/actualización a firebase
         postRef.set(data, SetOptions.merge())
                 .addOnSuccessListener(new OnSuccessListener<Void>() {
                     @Override
                     public void onSuccess(Void aVoid) {
                         Log.d("UpdateLikes", "Empieza update");
+                        //Se actualizan los likes del post en cuestión
                         updateNumberOfLikes(position);
                     }
                 })
@@ -360,12 +416,21 @@ public class PostFragment extends Fragment {
     }
 
 
+    /**
+     * Cuenta el número de likes de cada post y actualiza los contadores que aparecen en la tarjeta de la pantalla
+     * @param postPosition, posición del post del que se desean obtener las interacciones, de tipo int.
+     */
     private void updateNumberOfLikes(final int postPosition) {
-        //FirebaseFirestore db = FirebaseFirestore.getInstance();
+        //Referencia a la colección de interacciones de un post
         CollectionReference likeRef = db.collection("post").document(listPost.get(postPosition).getUuid()).collection("interactions");
+
+        //Query para obtener el numero de likes
         Query queryLike = likeRef.whereEqualTo("like", 1);
+
+        //Query para obtener el numero de dislikes
         Query queryDisike = likeRef.whereEqualTo("like", -1);
 
+        //Llamada a la query para obtener los likes y contarlos
         queryLike.get().addOnCompleteListener(new OnCompleteListener<QuerySnapshot>() {
             @Override
             public void onComplete(@NonNull Task<QuerySnapshot> task) {
@@ -374,11 +439,12 @@ public class PostFragment extends Fragment {
                     listPost.get(postPosition).setnLikes(numberOfLikes);
                     adapter.notifyItemChanged(postPosition);
                 } else {
-                    //Log.d(TAG, "Error getting documents: ", task.getException());
+                    Log.d("LikeCount", "Error getting documents: ", task.getException());
                 }
             }
         });
 
+        //Llamada a la query para obtener los likes y contarlos
         queryDisike.get().addOnCompleteListener(new OnCompleteListener<QuerySnapshot>() {
             @Override
             public void onComplete(@NonNull Task<QuerySnapshot> task) {
@@ -387,7 +453,7 @@ public class PostFragment extends Fragment {
                     listPost.get(postPosition).setnDislikes(numberOfDislikes);
                     adapter.notifyItemChanged(postPosition);
                 } else {
-                    //Log.d(TAG, "Error getting documents: ", task.getException());
+                    Log.d("LikeCount", "Error getting documents: ", task.getException());
                 }
             }
         });
